test/errors/plugin-exception.js

module.exports = () => {
    throw new Error('this is an error');
    return {
        data: [[0, 1, 2], [3, 4, 5], [6, 7, 8]]
    }
}
